<resources>
    <string name="app_name">MyEats</string>

    <!-- login/create account strings -->
    <string name="title_create_account">Create Account</string>
    <string name="title_login">Login</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="button_sign_up">Sign up</string>
    <string name="text_view_sign_up">Don\'t have an account? Sign up here!</string>
    <string name="button_log_in">Log in</string>
    <string name="text_view_log_in">Already have an account? Log in here!</string>

    <!-- authentication errors -->
    <string name="no_email_error_message">Please enter your email</string>
    <string name="no_password_error_message">Password cannot be blank</string>
    <string name="no_name_error_message">Please enter your name</string>
    <string name="not_valid_email_error_message">Please enter a valid email address</string>
    <string name="passwords_dont_match_error_message">Passwords do not match</string>
    <string name="not_valid_password_error_message">Please create a password containing at least 6 characters</string>
    <string name="authentication_failed">Authentication failed.</string>

    <!-- authentication progress messages -->
    <string name="progress_dialog_loading">Loading...</string>
    <string name="progress_dialog_authenticating">Authenticating with Firebase...</string>

    <!-- main activity strings -->
    <string name="welcome_toolbar_title">Welcome, %s!</string>
    <string name="find_restaruants_button">Find Eats</string>
    <string name="saved_restaurants_button">Saved Eats</string>
    <string name="view_gallery_button">Eats gallery</string>

    <!-- restaurant list item strings -->
    <string name="title_find_restaurants">Find Eats</string>
    <string name="title_saved_restaurants">Saved Eats</string>
    <string name="rating_format">%s/5</string>
    <string name="empty_restaurants">You haven\'t saved any eats yet."</string>

    <!-- restaurant detail strings -->
    <string name="tel_format">tel:%s</string>
    <string name="map_format">geo:%1$s,%2$s?q=(%3$s)</string>
    <string name="saved_snackar">%s was added to your eats.</string>
    <string name="photo_button">Take a photo</string>
    <string name="view_on_yelp">View on Yelp</string>
    <string name="button_save_restaurant">Save Eat</string>
    <string name="button_delete_restaurant">Remove Eat</string>

    <!-- transition names -->
    <string name="transition_name_rest_img">restaurantImage</string>

</resources>
