<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.summerbrochtrup.myrestaurants.ui.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="center"
        android:src="@drawable/bacgkround5"
        android:id="@+id/background" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:padding="40dp"
        android:orientation="vertical">

        <com.summerbrochtrup.myrestaurants.fonts.OstrichFontTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:gravity="center"
            android:textSize="60sp"
            android:textStyle="bold"
            android:textColor="@color/colorTextIcons"
            android:layout_weight="6"/>

        <com.summerbrochtrup.myrestaurants.fonts.OstrichFontButton
            android:id="@+id/findRestaurantsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/find_restaruants_button"
            android:background="@color/colorAccent"
            android:layout_margin="20dp"
            android:padding="20dp"
            android:drawableLeft="@drawable/ic_search_white_24dp"
            android:drawablePadding="10dp"
            android:textColor="@color/colorTextIcons"
            android:textSize="30sp"
            android:alpha="0.7"
            android:textStyle="bold" />

        <com.summerbrochtrup.myrestaurants.fonts.OstrichFontButton
            android:id="@+id/savedRestaurantsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/saved_restaurants_button"
            android:background="@color/colorAccent"
            android:layout_margin="20dp"
            android:padding="20dp"
            android:drawableLeft="@android:drawable/ic_menu_save"
            android:drawablePadding="10dp"
            android:textColor="@color/colorTextIcons"
            android:textSize="30sp"
            android:alpha="0.8"
            android:textStyle="bold" />

        <com.summerbrochtrup.myrestaurants.fonts.OstrichFontButton
            android:id="@+id/viewGalleryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="@string/view_gallery_button"
            android:background="@color/colorAccent"
            android:padding="20dp"
            android:drawableLeft="@drawable/ic_camera_alt_white_24dp"
            android:drawablePadding="10dp"
            android:textColor="@color/colorTextIcons"
            android:textSize="30sp"
            android:alpha="0.9"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>

